Transform mouse constraint fails in some situations #39479

Closed
opened 2014-03-28 11:18:01 +01:00 by Mikhail Rachinskiy · 10 comments

System Information
Windows 8.1 x64
Renderer: GeForce GTX 650/PCIe/SSE2
Vendor: NVIDIA Corporation
Version: 4.4.0

Blender Version
Broken: 2.70 859039f

Short description of error
MMB axis constraint not always work with current vertical axis.
There is no clear pattern, this issue appears with full screen and windowed modes.

Supposedly been fixed in #37411

Exact steps for others to reproduce the error

  • Open Blender
  • Change view to Front (Ortho)

Try to constraint to the vertical axis usin MMB with different zoom factor

Here is a simple GIF animation to illustrate the problem:
MMB.gif

**System Information** Windows 8.1 x64 Renderer: GeForce GTX 650/PCIe/SSE2 Vendor: NVIDIA Corporation Version: 4.4.0 **Blender Version** Broken: 2.70 859039f **Short description of error** MMB axis constraint not always work with current vertical axis. There is no clear pattern, this issue appears with full screen and windowed modes. Supposedly been fixed in #37411 **Exact steps for others to reproduce the error** - Open Blender - Change view to Front (Ortho) # Try to constraint to the vertical axis usin MMB with different zoom factor Here is a simple GIF animation to illustrate the problem: ![MMB.gif](https://archive.blender.org/developer/F83167/MMB.gif)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy

Added subscriber: @mont29

Added subscriber: @mont29

Issue confirmed here with attached file…

MMB_constraint_on_Z_failure.blend

Issue confirmed here with attached file… [MMB_constraint_on_Z_failure.blend](https://archive.blender.org/developer/F83188/MMB_constraint_on_Z_failure.blend)
Bastien Montagne self-assigned this 2014-03-28 12:38:17 +01:00
Author
Member

Could you please fix this ASAP? Since this is general interaction issue (means each user working without manipulators experience this issue quite frequently), I believe it should be included in 2.70a release.

Could you please fix this ASAP? Since this is general interaction issue (means each user working without manipulators experience this issue quite frequently), I believe it should be included in 2.70a release.

This issue was referenced by blender/blender-addons-contrib@ae792e930c

This issue was referenced by blender/blender-addons-contrib@ae792e930c30157e6e591e79d590f1bbe60c8890

This issue was referenced by ae792e930c

This issue was referenced by ae792e930c30157e6e591e79d590f1bbe60c8890

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ae792e930c.

Closed by commit ae792e930c.
Author
Member

Thank you :D

Thank you :D
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39479
No description provided.