Fix T39479: Transform mouse constraint fails in some situations.

Some more float precision issue...